samples/_failures_safe/1761360182_588d08_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4a5d82b.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_b4a5d82b.c:153:9: error: expected expression at end of input
  153 |         if (token.type >= 0 && token.type < 6 && handlers[token.type] != NULL)
      |         ^~
./samples/SAFE/__tmp_b4a5d82b.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4a5d82b.c:153:9: error: expected declaration or statement at end of input
